<resources>
    <string name="app_name">skinsolve</string>
    <string name="titlelogin">Sudah siap wajah cerah dan sehat?</string>
    <string name="sublogin">Silahkan login untuk melanjutkan</string>
    <string name="username">Email</string>
    <string name="textemail">Masukkan Email</string>
    <string name="password">Password</string>
    <string name="textpassword">Masukkan Password</string>
    <string name="btnlogin">Masuk</string>
    <string name="textdaftar">Daftar akun</string>
    <string name="titleregister">Lengkapi data dirimu dibawah ini ya</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="textnama">Masukkan Nama</string>
    <string name="btndaftar">Daftar</string>
    <string name="linklogin">punya akun? login</string>
    <string name="titlewelcone">Selamat datang di SkinSolve</string>
    <string name="subwelcome">Memberikan solusi perawatan kulit wajah</string>
    <string name="Hello">Halo,</string>
    <string name="subTitleWelcome">Apa yang ingin kamu lakukan hari ini?</string>
    <string name="home">Home</string>
    <string name="search">Cari</string>
    <string name="tracking">Memantau</string>
    <string name="profile">Profil</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleCard1"><![CDATA[Pantau Makanan & Produk]]></string>
    <string name="subCard1">Pantau konsumsi makanan harian dan produk Anda</string>
    <string name="buttonCard1">+ Tambah Foto</string>
    <string name="titleCard2">Pantau Wajah</string>
    <string name="subCard2">Pantau kondisi kulit harian Anda!</string>
    <string name="buttonCard2">+ Tambah Foto</string>
    <string name="titleHome">Halo,</string>
    <string name="subTitlehome">Apa yang ingin kamu lakukan hari ini?</string>
    <string name="recomFoodHome">Rekomendasi Makanan</string>
    <string name="seeAll"><![CDATA[Lihat Semua >]]></string>
    <string name="profileName">Nama Anda</string>
    <string name="emailProfile">email@gmail.com</string>
    <string name="mnMyProfile">Profil Saya</string>
    <string name="mnLogout">Keluar</string>
    <string name="profileData">Data Profil</string>
    <string name="changeFoto">Ubah Photo</string>
    <string name="yourName">Nama Kamu</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="DateofBirth">Tanggal Lahir</string>
    <string name="save">Simpan Data</string>
    <string name="findProduct">Cari Produk</string>
    <string name="foryou">Untuk Kamu</string>
    <string name="tracker">Pantau</string>
    <string name="foodproduct">Makanan / Produk</string>
    <string name="date">01/08/2024</string>
    <string name="trackerprogress">Pantau Progres</string>
    <string name="skin">Kulit Wajah</string>
    <string name="foodProduct">Makanan/Produk</string>
    <string name="recommendedProduct">Rekomendasi produk</string>
    <string name="title">Judul</string>
    <string name="nutrition">Nutrisi</string>
    <string name="benefits">Keuntungan</string>
    <string name="foodinformation">Informasi Makanan</string>
    <string name="productinformation">Informasi Produk</string>
    <string name="brand">Merek</string>
    <string name="type">Tipe Produk</string>
    <string name="ingredients">Bahan</string>
    <string name="foodRecommendation">Rekomendasi Makanan</string>
    <string name="tellSkin">Pilih jenis kulit anda</string>
    <string name="choseOne">Pilih salah satu</string>
    <string name="dry">Kering</string>
    <string name="oily">Berminyak</string>
    <string name="normal">Normal</string>
    <string name="combination">Kombinasi</string>
    <string name="sensitive">Sensitif</string>
    <string name="next">Selanjutnya</string>
    <string name="productRecommendation">Rekomendasi Produk</string>
    <string name="wajah">Pantau Wajahmu</string>
    <string name="makan">Makanan/Produk</string>
    <string name="addfoto">+ Foto</string>
    <string name="cari">Cari Produk</string>
    <string name="foodTracker">Pantau Makanan</string>
    <string name="deskripsiPantauMakanan">Pantau konsumsi makanan Anda.</string>
    <string name="pantauWajah">Pantau Wajah</string>
    <string name="deskripsiPantauProduk">Pantau kemajuan kulitmu dengan mengambil selfie sederhana!</string>
    <string name="image_description">image</string>
</resources>