<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SkinSelectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <ImageView-->
<!--            android:id="@+id/mnBack"-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/ic_arrow_back"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!-- Teks judul -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/tellSkin"
            android:textColor="#800080"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Teks sub-judul -->
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choseOne"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <!-- Layout untuk tombol-tombol pilihan -->
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/tvSubtitle"
            app:layout_constraintStart_toStartOf="@+id/tvSubtitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle">

            <RadioButton
                android:id="@+id/rbDry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/dry"
                android:textColor="@drawable/text_color" />

            <RadioButton
                android:id="@+id/rbOily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/oily"
                android:textColor="@drawable/text_color" />

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/normal"
                android:textColor="@drawable/text_color" />

            <RadioButton
                android:id="@+id/rbCombination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/combination"
                android:textColor="@drawable/text_color" />

            <RadioButton
                android:id="@+id/rbSensitive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/sensitive"
                android:textColor="@drawable/text_color" />

        </RadioGroup>

        <!-- Tombol Next -->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>