<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Bagian yang tidak di-scroll -->
        <ImageView
            android:id="@+id/mnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/productinformation"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ScrollView mulai dari sini, di bawah Title -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/avoskin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/title"
                    android:textColor="@color/dasar"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivProduct" />

                <TextView
                    android:id="@+id/tvTitleBrand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="17sp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/brand"
                    app:layout_constraintEnd_toEndOf="@+id/tvName"
                    app:layout_constraintStart_toStartOf="@+id/tvName"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvBrand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/brand"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleBrand"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleBrand"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleBrand" />

                <TextView
                    android:id="@+id/tvTitleType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/type"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="@+id/tvBrand"
                    app:layout_constraintStart_toStartOf="@+id/tvBrand"
                    app:layout_constraintTop_toBottomOf="@+id/tvBrand" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/type"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleType"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleType"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleType" />

                <TextView
                    android:id="@+id/tvTitleIngredients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/ingredients"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="@+id/tvType"
                    app:layout_constraintStart_toStartOf="@+id/tvType"
                    app:layout_constraintTop_toBottomOf="@+id/tvType" />

                <TextView
                    android:id="@+id/tvInredients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/ingredients"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleIngredients"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleIngredients"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleIngredients" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
